Feature: Show Connection-Status, Show Agent Attributes, Filter By Properties and Attributes (#14)
* feat: expand agent attributes

* feat: show agent attributes

* feat: show connection status

* feat: filter + big refactor

* feat: attribute filtering

* refactor: directory-structure

* hotfix: typo in AttributesForm

* fix: spotlessApply

* fix: code smells

* fix: delete debug jsx

* fix: classy react rerender bug and removed console logs